--- a/style.css
+++ b/style.css
@@ -120,12 +120,16 @@
 	margin-right: 0px;
 }
 .main__wrap-img {
-	width: 100%
-	height: 100%;
+	max-width: 100%
 }
 
 /*Медиа запросы*/
-@media (min-width: 1201px) and (max-width: 1650px) {
+@media (min-width: 1501px) and (max-width: 1700px) {
+.main__wrap {
+	padding-top: 60px;
+}
+}
+@media (min-width: 1201px) and (max-width: 1500px) {
 .header {
 	height: 166px;/*Меняем высоту header*/
 	padding: 0 4vw 0 10.4vw;
@@ -162,14 +166,14 @@
     height: 44px;
 }
 .main__wrap {
-	padding-top: 62px;
+	padding-top: 60px;
 }
 .main__wrap-one { /*Изменяем размер картинки*/
     width: 226px; 
 	height: 300px;
 	margin-right: 24px;
 }
-.main__wrap-two { /*Изменяем размер картинки*/
+.main__wrap-two {/* Изменяем размер картинки*/
 	width: 203px; 
 	height: 270px;
 	margin-right: 24px;
@@ -179,11 +183,10 @@
 	height: 270px;
 }
 .main__wrap-img {
-	width: 100%;
-	height: 100%;
+	max-width: 100%;
 }
 }
-@media (min-width: 769px) and (max-width: 1200px) {
+@media (min-width: 900px) and (max-width: 1200px) {
 .header {
 	height: 166px;
 	padding: 0 1vw 0 3.8vw;
@@ -228,30 +231,22 @@
     height: 44px;
 }
 .main__wrap {
-	padding-top: 62px;
-	padding-left: 6vw;
+	padding-top: 0px;
 }
 .main__wrap-one {
-	width: 226px; 
-	height: 300px;
 	margin-right: 24px;
 }
 .main__wrap-two {
-	width: 203px; 
-	height: 270px;
 	margin-right: 24px;
 }
 .main__wrap-three {
-	width: 150px; 
-	height: 270px;
 	margin-left: 0px;
 }
 .main__wrap-img {
-	width: 100%;
-	height: 100%;
+	max-width: 100%;
 }
 }
-@media (max-width: 768px) {
+@media (max-width: 899px) {
 .header {
 	height: 120px;
 	padding: 0 5vw 0 11vw;
