--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*Сброс параметров поля, границы, отступа*/
-* {
+*, *::before, *::after {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -34,7 +34,9 @@
     color: #fff;
     cursor: pointer; /*Изменение курсора, при наведении на пункты меню*/
 }
-
+#check-burger {
+	display: none;
+}
 /*Свойства для бургер-меню*/
 .burger {
 	display: none;
@@ -42,22 +44,28 @@
 	height: 20px;
 	width: 26px;
 	cursor: pointer; /*Изменение курсора*/
+	z-index: 2;
 }
-.burger span {
+.burger span { /*Рисуем линию бургера по центру*/
 	display: block;
 	position: absolute;
    	height: 3px;
 	width: 100%;
-	background: #fff;
-}
-.burger__line_first {
-	top: 0;
-}
-.burger__line_second, .burger__line_third {
+	background-color: #fff;
 	top: 8px;
 }
-.burger__line_fourth {
-	top: 16px;
+.burger::before, .burger::after {
+	content: '';
+	background-color: #fff;
+	position: absolute;
+	width: 100%;
+	height: 3px;
+}
+.burger::before {
+	top: 0;
+}
+.burger:after {
+	bottom: 0;
 }
 
 /*Свойства основного контента*/
@@ -102,6 +110,7 @@
     width: 294px;/*Ширина кнопки*/
     height: 62px;/*Высота кнопки*/
     border-radius: 48px;/*Скругление кнопки*/
+    cursor: pointer;
 }
 .main__wrap {
 	flex: 1 1 50%;
@@ -251,6 +260,7 @@
 	height: 120px;
 	padding: 0 5vw 0 11vw;
 	margin-bottom: 20px;
+	position: relative;
 }
 .header__logo {
     max-width: 104px;
@@ -264,8 +274,46 @@
 .menu { /*Скрываем меню*/
     display: none;
 }
+/*Свойства появляющегося меню при нажатии на бургер*/
+#check-burger:checked ~ .menu {
+	display: flex;
+	flex-flow: column;
+    justify-content: center;
+    overflow: visible;
+    width: 100%;
+    height: 100vh;
+    background-color: #fff; 
+    padding-top: 15px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+.menu__link {
+	font-size: 30px;
+	font-weight: bold;
+	line-height: 36px;
+	text-transform: lowercase;
+	margin: 0 0 24px 0;
+	color: #000;
+	text-align: center;
+}
+
 .burger {  /*Делаем бургер-меню видимым*/
 	display: block;
+}
+#check-burger:checked ~ .burger span {
+	display: none;
+}
+#check-burger:checked ~ .burger::before {
+	transform: rotate(45deg);
+	top: 8px;
+	background-color: #000;
+}
+#check-burger:checked ~ .burger::after {
+	transform: rotate(-45deg);
+	bottom: 8px;
+	background-color: #000;
 }
 .main__content {
 	padding-left: 4vw;
